--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,25 +4,18 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-color-rgb: 255, 255, 255; /* Set background color to white */
 }
 
 @media (prefers-color-scheme: white) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-color-rgb: 255, 255, 255; /* Ensure background remains white in white color scheme */
   }
 }
 
 body {
   height: 100vh;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(var(--background-color-rgb)); /* Use plain white background */
 }
